2011-06-15 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/z80.src/inst_xd.cc:
	  Fixed bug #3315215.

2011-06-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  src/z80/gen.c:
	  Fixed bug #3315124.

2011-06-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug3299577.c: fixed warnings
	* support/regression/tests/abs.c,
	  support/regression/tests/bool.c,
	  support/regression/tests/bug-1292721.c,
	  support/regression/tests/bug-2646174.c,
	  support/regression/tests/bug-2890326.c,
	  support/regression/tests/bug-2982135.c,
	  support/regression/tests/bug-3034585.c,
	  support/regression/tests/bug-3117729.c,
	  support/regression/tests/bug-3184920.c,
	  support/regression/tests/bug1477149.c,
	  support/regression/tests/bug1536762.c,
	  support/regression/tests/bug1838000.c,
	  support/regression/tests/bug2084206.c,
	  support/regression/tests/bug2729218.c,
	  support/regression/tests/bug2862650.c,
	  support/regression/tests/bug3029630.c,
	  support/regression/tests/bug3130806.c,
	  support/regression/tests/bug3166208.c,
	  support/regression/tests/bug3303325.c,
	  support/regression/tests/bugs-1596270-1736867.c,
	  support/regression/tests/interrupt.c,
	  support/regression/tests/memory.c,
	  support/regression/tests/strcmp.c,
	  support/regression/tests/strcpy.c,
	  support/regression/tests/strncmp.c,
	  support/regression/tests/strpbrk.c,
	  support/regression/tests/strspn.c: changed svn eol-style

2011-06-10 Philipp Klaus Krause <pkk AT spth.de>

	* Merge the optralloc branch.

2011-06-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed register-assignment-related multiplication bug.

2011-06-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCcse.c(cseBBlock): fixed the fix

2011-06-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCsymt.h,
	  src/SDCCopt.c:
	  Rename __optlink to __smallc.

2011-06-09 Maarten Brock <sourceforge.brock AT dse.nl>
